--- a/plansza.css
+++ b/plansza.css
@@ -300,13 +300,14 @@ html {
     z-index: 2;
     display: block;
     position: absolute;
-    top: -2vw;
+    margin: auto;
+    transform: translateX(-1vw);
     animation: move_bg1 3s alternate-reverse infinite;
 
 }
 
 @keyframes move_bg1 {
-    0% {top: 32vw;}
+    0% {top: 24vw;}
     100% {top: 16vw;}
 
 }
@@ -329,9 +330,9 @@ html {
 }
 
 .upbg1b {
-    width: 6.85vw;
-    height: 12vw;
-    top: 2.45vw;
+    width: 6.5vw;
+    height: 120vw;
+    top: 2.4vw;
     background-color: white;
     display: block;
     margin: auto;
@@ -346,7 +347,7 @@ html {
 
 .upbg1c {
     width: 0.3vw;
-    height: 12vw;
+    height: 120vw;
     top: 3.8vw;
     background-color: rgb(0, 0, 0);
     display: block;
@@ -359,8 +360,8 @@ html {
 }
 
 .upbg1d {
-    width: 6.9vw;
-    height: 12vw;
+    width: 6.6vw;
+    height: 120vw;
     top: 2.2vw;
     background-color: rgb(255, 255, 255);
     display: block;
@@ -375,7 +376,7 @@ html {
 
 
 .moveup1box {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(255, 0, 0, 0);
     width: 100%;
     height: 100%;
     -webkit-mask-image: url('images/mask1.png');
