--- a/fullscreen_mode.css
+++ b/fullscreen_mode.css
@@ -26,7 +26,7 @@ html {
     background-color: rgb(255, 255, 255);
     background-image: url(images/wp8.png);
     background-size: cover;
-    outline: 0.4vw black solid;
+    outline: 25vw black solid;
     width: 100%;
     height: 100%;
 
@@ -38,7 +38,7 @@ html {
 
     transition: 1s ease-in-out;
     opacity: 1;
-    box-shadow: rgba(0, 0, 0, 0.667) 0.5vw 0.5vw 1vw;
+    box-shadow: rgba(0, 0, 0, 0.5) 1vw 0vw 3vw inset, rgb(0, 0, 0, 0.5) -1vw 0vw 3vw inset, rgba(0, 0, 0, 0.5) 0vw 0.5vw 3vw inset, rgba(0, 0, 0, 0.5) 0vw -0.5vw 3vw; /*FULLSCREEN EXCLUSIVE CHANGE*/
 
 
 }
@@ -237,7 +237,7 @@ html {
 
     background-color: white;
     width: 40%;
-    height: 40%;
+    height: 30%;
     border-radius: 0.7vw;
     box-shadow: 0vw 0vw 0.7vw black;
     transition: ease-in 1s;
