--- a/plansza.css
+++ b/plansza.css
@@ -30,8 +30,8 @@ html {
     width: 100%;
     height: 100%;
 
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
-    grid-template-rows: auto auto auto auto auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 
     row-gap: 0;
     column-gap: 0;
@@ -99,6 +99,7 @@ html {
     justify-content: center;
     align-items: center;
 
+
 }
 
 .button_a {
@@ -112,12 +113,13 @@ html {
     box-shadow: rgba(0, 0, 0, 0.667) 0.3vw 0.3vw 0.6vw;
     transition: 0.2s 0s ease-out;
     box-shadow: inset rgba(0, 0, 0, 0.192) 0.5vw 0.5vw 0.5vw;
+    border: rgba(0, 0, 0, 0.247) 0.3vw solid;
 
 }
 
 .button_b {
-    width: 90%;
-    height: 90%;
+    width: 75%;
+    height: 75%;
     background-color: rgb(105, 212, 84);
     border-radius: 100%;
     outline: rgb(228, 228, 228) solid 0.3vw;
@@ -129,8 +131,8 @@ html {
 }
 
 .button_c {
-    width: 90%;
-    height: 90%;
+    width: 75%;
+    height: 75%;
     background-color: rgb(236, 86, 86);
     display: block;
     border-radius: 100%;
@@ -162,11 +164,12 @@ html {
     z-index: 6;
 
     text-align: center;
-    font-size: 2vw;
+    font-size: 1.8vw;
     color: white;
     pointer-events: none;
-    font-family: sans-serif;
-    line-height: 2vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    align-self: center;
+    justify-self: center;
 }
 
 .button_b_icon {
@@ -174,14 +177,14 @@ html {
     z-index: 6;
 
     text-align: center;
-    font-size: 2.5vw;
+    font-size: 1.4vw;
     color: white;
     pointer-events: none;
     font-family: sans-serif;
     background-image: url(images/icon1.png);
     background-size: contain;
-    width: 4vw;
-    height: 4vw;
+    width: 3.2vw;
+    height: 3.2vw;
 
 }
 
@@ -196,8 +199,8 @@ html {
     font-family: sans-serif;
     background-image: url(images/icon2.png);
     background-size: contain;
-    width: 4vw;
-    height: 4vw;
+    width: 3.2vw;
+    height: 3.2vw;
 
 }
 
@@ -464,12 +467,12 @@ html {
     position: absolute;
     z-index: 10;
 
-    height: 10vw;
-    width: 15vw;
+    height: 15vw;
+    width: 20vw;
     background-color: none;
     background-size: contain;
     overflow: visible;
-    top: 20vw;
+    top: 15vw;
 
     -webkit-mask-image: url('images/mask1.png');
     -webkit-mask-position: center;
@@ -480,16 +483,19 @@ html {
 
 #item_moveup1 {
     position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 7vw;
+    height: 12vw;
+    width: 16vw;
+    top: 12vw;
     transition-duration: 2s;
+    margin: auto;
+    left: 0;
+    right: 0;
 
 
 }
 
 .item_up {
-    top: -1vw !important;
+    top: 0vw !important;
 
 }
 
