--- a/plansza.css
+++ b/plansza.css
@@ -19,7 +19,7 @@ html {
 
     background-color: rgba(255, 255, 255, 0);
 
-    transition-duration: 2s;
+    transition-duration: 0.5s;
 
 }
 
@@ -516,21 +516,28 @@ html {
 
 .rotate_and_center {
     rotate: 90deg;
-    transition-duration: 2s;
 
 }
 
-.rotate_and_center_back {
-    rotate: -90deg;
-    position: absolute;
-    transition-duration: 2s;
-    filter: hue-rotate(70deg);
-    color: red;
 
-}
 
 .maximize {
-    width: 150vw;
+    height: 100vw;
+    width: auto;
+    transform: translateY(50vw);
+
+}
+
+.add_inset_shadow {
+    box-shadow: 0vw 0vw 20vw rgb(0, 0, 0) inset;
+    
+
+}
+
+.black_bg {
+    background-color: black;
+    transition-duration: 0.5s;
+
 
 }
 
