--- a/plansza.css
+++ b/plansza.css
@@ -60,9 +60,9 @@ html {
     top: 0.2vw;
     right: 2.2vw;
 
-    background-color: rgb(228, 228, 228);
+    background-color: rgb(177, 18, 18);
     border-radius: 100%;
-    outline: solid rgb(188, 188, 188) 0.5vw;
+    outline: solid rgb(255, 53, 53) 0.4vw;
     text-align: center;
     font-family: sans-serif;
     font-size: 3vw;
@@ -75,6 +75,8 @@ html {
     transition: 0.5s ease-out;
     pointer-events: none;
     box-shadow: inset rgba(0, 0, 0, 0.096) 0.5vw 0.5vw 0.5vw;
+    background-image: url(images/icon_closer.png);
+    background-size: cover;
 
 
 }
@@ -90,7 +92,7 @@ html {
 .closer:hover {
     transition-delay: 0s;
     scale: 125%;
-    background-color: rgb(212, 212, 212);
+    background-color: rgb(0, 0, 0);
 }
 
 .element_box {
@@ -122,6 +124,7 @@ html {
     width: 75%;
     height: 75%;
     background-color: rgb(105, 212, 84);
+    display: block;
     border-radius: 100%;
     outline: rgb(228, 228, 228) solid 0.3vw;
     z-index: 5;
@@ -163,10 +166,11 @@ html {
     z-index: 6;
 
     text-align: center;
-    font-size: 1.8vw;
+    font-size: 80%;
     color: white;
     pointer-events: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 900;
     align-self: center;
     justify-self: center;
 }
@@ -176,15 +180,16 @@ html {
     z-index: 6;
 
     text-align: center;
-    font-size: 1.4vw;
+    font-size: 80%;
     color: white;
     pointer-events: none;
     font-family: sans-serif;
     background-image: url(images/icon1.png);
     background-size: contain;
-    width: 3.2vw;
-    height: 3.2vw;
-
+    aspect-ratio: 1/1;
+    height: 7.4%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .button_c_icon {
@@ -192,14 +197,14 @@ html {
     z-index: 6;
 
     text-align: center;
-    font-size: 2.5vw;
+    font-size: 80%;
     color: white;
     pointer-events: none;
     font-family: sans-serif;
     background-image: url(images/icon2.png);
     background-size: contain;
-    width: 3.2vw;
-    height: 3.2vw;
+    width: 65%;
+    height: 65%;
 
 }
 
@@ -274,7 +279,7 @@ html {
 
 .start_msg_text {
     color: black;
-    font-size: 1.7vw;
+    font-size: 80%;
     text-align: center;
 
 }
@@ -284,7 +289,7 @@ html {
     right: -3%;
     top: -6%;
     pointer-events: none;
-    animation: block_click 0s 2.5s forwards;
+    animation: block_click 0s 2s forwards;
 
 }
 
@@ -327,14 +332,13 @@ html {
     display: block;
     position: absolute;
     margin: auto;
-    transform: translateX(-1vw);
     animation: move_bg1 3s alternate-reverse infinite;
 
 }
 
 @keyframes move_bg1 {
-    0% {top: 24vw;}
-    100% {top: 16vw;}
+    0% {top: 50%;}
+    100% {top: 70%;}
 
 }
 
@@ -409,6 +413,7 @@ html {
     -webkit-mask-position: center;
     -webkit-mask-size: 100% 100%;
 
+
 }
 
 
@@ -466,12 +471,13 @@ html {
     position: absolute;
     z-index: 10;
 
-    height: 15vw;
-    width: 20vw;
+    height: 60%;
+    width: 20%;
     background-color: none;
     background-size: contain;
     overflow: visible;
-    top: 15vw;
+    top: 25%;
+    pointer-events: none;
 
     -webkit-mask-image: url('images/mask1.png');
     -webkit-mask-position: center;
@@ -482,9 +488,9 @@ html {
 
 #item_moveup1 {
     position: absolute;
-    height: 12vw;
-    width: 16vw;
-    top: 12vw;
+    height: 50%;
+    width: 100%;
+    top: 80%;
     transition-duration: 2s;
     margin: auto;
     left: 0;
@@ -494,7 +500,7 @@ html {
 }
 
 .item_up {
-    top: 0vw !important;
+    top: 20% !important;
 
 }
 
@@ -515,18 +521,148 @@ html {
     }
 
     .elements_container {
-            box-shadow: 7vw 0vw 10vw rgb(0, 0, 0) inset, -7vw 0vw 10vw rgb(0, 0, 0) inset, 0vw 7vw 10vw rgb(0, 0, 0) inset, 0vw -7vw 10vw rgb(0, 0, 0) inset;
+        box-shadow: 7vw 0vw 10vw rgb(0, 0, 0) inset, -7vw 0vw 10vw rgb(0, 0, 0) inset, 0vw 7vw 10vw rgb(0, 0, 0) inset, 0vw -7vw 10vw rgb(0, 0, 0) inset;
             
-        }
+    }
+    
+    .button_a_text {
+            
+        font-size: 150%;
+            
+    }
+
+    .start_msg_text {
+
+        font-size: 120%;
+ 
+    
+    }
+
+    @keyframes move_bg1 {
+        0% {top: 57%;}
+        100% {top: 75%;}
+
+    }
+
+    .m1fix {
+        transform: translate(15%, 0%) scale(25%) !important;
+    }
+
+    .m2fix {
+        transform: translate(30%, 0%) scale(25%) !important;
+    }
+
+    .m3fix {
+        transform: translate(0%, 0%) scale(25%) !important;
+    }
+
+    .moveup1 {
+        width: 12%;
+        height: 12;
+    }
+
+    #closer1{
+        left: 0;
+        right: 0;
+        top: 50%;
+        bottom: 0;
+        margin: auto;
+
+        width: 7%;
+        height: auto;
+        aspect-ratio: 1/1;
+}
+    
+#closer2{
+    left: 0;
+    right: 0;
+    top: 50%;
+    bottom: 0;
+    margin: auto;
+
+    width: 7%;
+    height: auto;
+    aspect-ratio: 1/1;
+}
+
+#closer3{
+    left: 0;
+    right: 0;
+    top: 50%;
+    bottom: 0;
+    margin: auto;
+
+    width: 7%;
+    height: auto;
+    aspect-ratio: 1/1;
+}
+    
+}
+
+
+
+@media screen and (max-aspect-ratio: 14 / 16) {
+
+    .main_container {
+        height: 70vw;
+        transform: translateY(14vw);
+
+    }
+
+    .start_msg_text {
+
+        font-size: 130%;
+ 
+    
+    }
 
 }
 
+@media screen and (max-aspect-ratio: 12 / 16) {
+
+    .main_container {
+        height: 80vw;
+        transform: translateY(21vw);
+
+    }
+
+    .start_msg_text {
+
+        font-size: 140%;
+ 
+    
+    }
+
+
+}
 
 @media screen and (max-aspect-ratio: 10 / 16) {
 
     .main_container {
         height: 100vw;
-        transform: translateY(38vw);
+        transform: translateY(40vw);
+
+    }
+
+    .start_msg_text {
+
+        font-size: 150%;
+ 
+    
+    }
+
+    .m1fix {
+        transform: translate(10%, 0%) scale(25%) !important;
+    }
+
+    .m2fix {
+        transform: translate(20%, 0%) scale(25%) !important;
+    }
+
+    .m3fix {
+        transform: translate(0%, 0%) scale(25%) !important;
     }
 
 }
+
+
