--- a/vertical.css
+++ b/vertical.css
@@ -114,12 +114,10 @@ html {
     background-color: rgb(255, 170, 42);
     display: block;
     border-radius: 100%;
-    outline: rgb(228, 228, 228) solid 0.3vw;
+    outline: rgb(228, 228, 228) solid 0.6vw;
     z-index: 5;
     transition: 0.2s 0s ease-out;
-    box-shadow: inset rgba(0, 0, 0, 0.192) 0.5vw 0.5vw 0.5vw, rgb(0, 0, 0) 0vw 0vw 2vw;
-    border: rgba(0, 0, 0, 0.247) 0.3vw solid;
-
+    border: none;
 }
 
 .button_b {
@@ -152,6 +150,12 @@ html {
     scale: 115%;
     background-color: rgb(255, 187, 103);
 }
+
+.button_a:hover + .button_a_icon {
+    filter: hue-rotate(900deg) !important;
+
+}
+
 
 .button_b:hover {
     scale: 115%;
@@ -191,7 +195,7 @@ html {
     background-image: url(images/icon1.png);
     background-size: contain;
     aspect-ratio: 1/1;
-    height: 7.4%;
+    height: 7%;
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.75;
@@ -208,8 +212,8 @@ html {
     pointer-events: none;
     font-family: sans-serif;
     background-size: contain;
-    aspect-ratio: 1/1;
-    height: 2.3vw;
+    aspect-ratio: 1 / 1;
+    height: 2.1vw;
     background-position: center;
     background-repeat: no-repeat;
     opacity: 1;
@@ -225,7 +229,8 @@ html {
     pointer-events: none;
     font-family: sans-serif;
     background-image: url(images/icon2.png);
-    background-size: contain;
+    background-size: cover;
+    background-color: red;
     width: 65%;
     height: 65%;
     opacity: 0.75;
