--- a/mobile_app/app.css
+++ b/mobile_app/app.css
@@ -1,5 +1,5 @@
 html {
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(0, 0, 0);
     font-family: 'Oswald', sans-serif;
     font-size: 2vw;
     overflow: hidden;
@@ -7,7 +7,7 @@ html {
 }
 
 .main_container {
-    width: 70vw;
+    height: 100%;
     aspect-ratio: 9 / 16;
 
     position: absolute;
@@ -16,6 +16,8 @@ html {
     right: 0;
     top: 0;
     bottom: 0;
+
+    overflow: hidden;
 
     background-color: rgba(255, 255, 255, 0);
 
@@ -53,7 +55,7 @@ html {
 .header_top {
     background-color: rgb(226, 46, 70);
     width: 100%;
-    height: 25%;
+    height: 29%;
     position: absolute;
     box-shadow: black 0vw 0vw 1vw;
     display: grid;
@@ -68,8 +70,10 @@ html {
     border-radius: 100%;
     background-size: cover;
     aspect-ratio: 1/1;
-    width: 80%;
+    width: 60%;
     margin: auto;
+    margin-top: 2.5vw;
+    outline: black 0.4vw solid;;
 }
 
 .header_text {
@@ -84,10 +88,11 @@ html {
 .header_text_inside {
     margin: 0;
     line-height: 0;
-    font-size: 0.8vw;
-    vertical-align: middle;
+    font-size: 2.5vw;
     align-self: flex-end;
-    text-align: center;
+    color: white;
+    line-height: 3vw;
+
 
 
 }
@@ -96,25 +101,36 @@ html {
 .barL {
     outline: rgb(0, 0, 0) solid 1px;
     border-radius: 10px;
-    height: 0.7vw;
-    width: 3.6vw;
+    height: 20%;
+    width: 60%;
     background-color: rgb(155, 62, 255);
     margin: auto;
+    margin-top: 15%;
+
 }
 
 .barR {
     outline: rgb(0, 0, 0) solid 1px;
     border-radius: 10px;
-    height: 0.7vw;
-    width: 3.6vw;
+    height: 20%;
+    width: 60%;
     background-color: rgb(74, 74, 255);
     margin: auto;
+    margin-top: 15%;
+
 }
 
 .elements_container_hidden {
     opacity: 50%;
     scale: 80%;
     
+}
+
+.white_line_deco {
+    width: 100%;
+    height: 30%;
+    background-color: white;
+    border-radius: 5vw;
 }
 
 
@@ -124,7 +140,7 @@ html {
     z-index: 60;
     position: absolute;
     top: 0.2vw;
-    right: 2.2vw;
+    right: -1.2vw !important;
 
     background-color: rgb(177, 18, 18);
     border-radius: 100%;
@@ -141,7 +157,7 @@ html {
     transition: 0.5s ease-out;
     pointer-events: none;
     box-shadow: inset rgba(0, 0, 0, 0.096) 0.5vw 0.5vw 0.5vw;
-    background-image: url(images/icon_closer.png);
+    background-image: url(../images/icon_closer.png);
     background-size: cover;
 
 
@@ -314,7 +330,7 @@ html {
     left: 0;
     right: 0;
     margin: auto;
-    transition: 1s ease-in;
+    transition: 2s ease-in;
 
     transform: translateX(-375%);
     scale: 50%;
@@ -327,7 +343,7 @@ html {
 
 .slider_active {
     transition: 1s ease-out;
-    transform: translateX(50%);
+    transform: translateX(23%);
     scale: 100%;
     opacity: 1;
 
@@ -603,7 +619,7 @@ html {
 /* MEDIA START */
 
 
-@media screen and (max-aspect-ratio: 16 / 16) {
+@media screen and (min-aspect-ratio: 16 / 12) {
 
     .text_top {
         margin: 0.4vw;
@@ -626,7 +642,7 @@ html {
     }
 
 
-    .start_msg_text {
+    .header_text_inside {
 
         font-size: 3vw;
  
@@ -679,12 +695,7 @@ html {
         background-color: black;
     }
 
-    .main_container {
-        height: 60vw;
-        width: auto;
-        rotate: 0deg;
-
-    }
+  
 
     .elements_container {
         box-shadow: 7vw 0vw 10vw rgba(0, 0, 0, 0.393) inset, -7vw 0vw 10vw rgb(0, 0, 0) inset, 0vw 7vw 10vw rgb(0, 0, 0) inset, 0vw -7vw 10vw rgb(0, 0, 0) inset;
@@ -697,7 +708,7 @@ html {
             
     }
 
-    .start_msg_text {
+    .header_text_inside {
 
         font-size: 120%;
  
@@ -758,28 +769,41 @@ html {
     height: auto;
     aspect-ratio: 1/1;
 }
+
+.header_text_inside {
+    font-size: 1.5vw;
+    line-height: 1.5vw;
+
+}
+
+.logo_text {
+    background-color: rgba(0, 0, 255, 0);
+
+}
     
 }
 
 
 
-@media screen and (max-aspect-ratio: 14 / 16) {
+@media screen and (max-aspect-ratio: 12 / 16) {
 
-    .main_container {
-        height: 70vw;
-        transform: translateY(14vw);
 
-    }
-
-    .start_msg_text {
-
-        font-size: 130%;
- 
+    .header_text_inside {
+        font-size: 5vw;
+        line-height: 3.5vw;
     
     }
+    
+    .logo_text {
+        background-color: rgba(0, 0, 255, 0);
+    
+    }
+        
 
 
 }
+
+/*
 
 @media screen and (max-aspect-ratio: 16 / 16) and (min-aspect-ratio: 1 / 16) {
     
@@ -860,14 +884,10 @@ html {
     aspect-ratio: 1/1;
 }
 
-    .main_container {
-        height: 80vw;
-        transform: translateY(21vw);
-
-    }
 
 
-    .start_msg_text {
+
+    .header_text_inside {
 
         font-size: 140%;
  
@@ -892,13 +912,8 @@ html {
 
     }
 
-    .main_container {
-        height: 100vw;
-        transform: translateY(38vw);
 
-    }
-
-    .start_msg_text {
+    .header_text_inside {
 
         font-size: 150%;
  
@@ -918,10 +933,7 @@ html {
     }
 
 }
-
-
-/* MEDIA END */
-
+*/
 
 
 .main_overlay2 {
@@ -942,14 +954,6 @@ html {
 
 }
 
-.main_overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-
-    background-color: rgba(255, 255, 255, 0.107);
-    z-index: 1;
-}
 
 #slider1 {
     display: grid;
@@ -1098,13 +1102,6 @@ html {
     background-color: black;
 }
 
-.main_container {
-    height: 25vw;
-    width: auto;
-    transform: translateY(4vw);
-    rotate: 0deg;
-
-}
 
 .elements_container {
     box-shadow: 1vw 0vw 2vw rgba(0, 0, 0, 0.183) inset, -1vw 0vw 2vw rgba(0, 0, 0, 0.187) inset, 0vw 1vw 2vw rgba(0, 0, 0, 0.183) inset, 0vw -1vw 2vw rgba(0, 0, 0, 0.174) inset;
@@ -1184,95 +1181,9 @@ aspect-ratio: 1/1;
 
 
 
-/* MEDIA START */
-
-@media screen and (min-width: 0px) {
-    .main_container {
-        scale: 180%;
-        transform: translateY(0vw);
-        
-
-    }
-
-    .slider {
-        scale: 60%;
-    }
-
-}
-
-@media screen and (max-width: 1000px) {
-    .main_container {
-        scale: 220%;
-        transform: translateY(0vw);
-
-
-    }
-
-}
-
-@media screen and (max-width: 900px) {
-    .main_container {
-        scale: 245%;
-        transform: translateY(0vw);
-
-
-    }
-
-}
-
-@media screen and (max-width: 800px) {
-    .main_container {
-        scale: 260%;
-        transform: translateY(0vw);
-
-
-    }
-
-}
-
-@media screen and (max-width: 700px) {
-    .main_container {
-        scale: 335%;
-        transform: translateY(0vw);
-
-
-    }
-
-}
-
-    @media screen and (max-width: 600px) {
-        .main_container {
-            scale: 350%;
-            transform: translateY(0vw);
-    
-    
-        }
-
-    }
-
-        @media screen and (max-width: 500px) {
-            .main_container {
-                scale: 475%;
-                transform: translateY(0vw);
-        
-        
-            }
-
-            @media screen and (max-width: 400px) {
-                .main_container {
-                    scale: 550%;
-                    transform: translateY(0vw);
-            
-            
-                }
-
-            }
-
-}
-
-
-
 /* MEDIA END */
+
+
 
 .element_box{
     outline: rgba(255, 0, 0, 0) 1px solid;
@@ -1287,5 +1198,6 @@ aspect-ratio: 1/1;
 .main_overlay {
     background-color: rgba(255, 255, 255, 0.162) !important;
 }
+
 
 
