--- a/web_app.css
+++ b/web_app.css
@@ -25,15 +25,19 @@ html {
 
 .elements_container {
     display: grid;
-    background-color: rgb(255, 255, 255);
-    background-image: url(images/thumbnail.png);
-    background-size: cover;
+ /* background-color: rgb(255, 255, 255);
+    background-image: url(images/bg_main.png);
+    background-size: cover; */
+    background: rgb(166,16,105);
+    background: -moz-linear-gradient(0deg, rgba(166,16,105,1) 22%, rgba(6,18,157,1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(166,16,105,1) 22%, rgba(6,18,157,1) 100%);
+    background: linear-gradient(0deg, rgba(166,16,105,1) 22%, rgba(6,18,157,1) 100%);
     outline: 0.4vw black solid;
     width: 100%;
     height: 100%;
 
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 
     row-gap: 0;
     column-gap: 0;
@@ -95,6 +99,147 @@ html {
     background-color: rgb(0, 0, 0);
 }
 
+
+.header_top {
+    background-color: rgb(226, 46, 70);
+    width: 100%;
+    height: 20%;
+    position: absolute;
+    box-shadow: black 0vw 1vw 3vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+
+}
+
+.logo {
+    background-image: url(../images/cropped-kostka_Grywit_gradient_white-270x270.png);
+    background-color: yellow;
+    border-radius: 100%;
+    background-size: cover;
+    aspect-ratio: 1/1;
+    width: 33%;
+    margin: auto;
+    margin-top: 17%;
+    outline: black 0.4vw solid;
+    z-index: 6;
+    box-shadow: 0vw 0.4vw 2vw black;
+
+
+}
+
+.logo_text {
+    height: 100%;
+}
+
+.barLRtext {
+    color: white;
+    font-size: 0.4em;
+    margin-top: 3%;
+    text-align: center;
+    line-height: 100%;
+
+}
+
+.header_text {
+    height: 1fr;
+    width: 1fr;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.header_text_inside {
+    margin: 0;
+    line-height: 0;
+    font-size: 1.6vw;
+    align-self: flex-end;
+    color: white;
+    line-height: 3vw;
+
+
+
+}
+
+
+.barL {
+    outline: rgb(250, 164, 255) solid 0.2vw;
+    border-radius: 10px;
+    height: 35%;
+    width: 40%;
+    background-color: rgb(155, 62, 255);
+    margin: auto;
+}
+
+.barR {
+    outline: rgb(173, 185, 255) solid 0.2vw;
+    border-radius: 10px;
+    height: 35%;
+    width: 40%;
+    background-color: rgb(74, 74, 255);
+    margin: auto;
+
+}
+
+.elements_container_hidden {
+    opacity: 50%;
+    scale: 80%;
+    
+}
+
+.white_line_deco {
+    width: 100%;
+    height: 30%;
+    background-color: white;
+    border-radius: 5vw;
+    align-self: flex-end;
+}
+
+
+.closer {
+    width: 4vw;
+    height: 4vw;
+    z-index: 60;
+    position: absolute;
+    top: 0.2vw;
+    right: -10% !important;
+
+    background-color: rgb(177, 18, 18);
+    border-radius: 100%;
+    outline: solid rgb(255, 53, 53) 0.4vw;
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 3vw;
+    line-height: 4vw;
+    font-weight: bolder;
+    color: white;
+    text-shadow: 0.2vw 0.2vw 0.2vw rgba(0, 0, 0, 0.331);
+
+    opacity: 0;
+    transition: 0.5s ease-out;
+    pointer-events: none;
+    box-shadow: inset rgba(0, 0, 0, 0.096) 0.5vw 0.5vw 0.5vw;
+    background-image: url(../images/icon_closer.png);
+    background-size: cover;
+
+
+}
+
+.closer_active {
+    opacity: 100%;
+    transition: 0.5s 1s ease-out;
+    pointer-events: all;
+
+
+}
+
+.closer:hover {
+    transition-delay: 0s;
+    scale: 125%;
+    background-color: rgb(0, 0, 0);
+}
+
 .element_box {
     display: flex;
     background-color: none;
@@ -105,26 +250,50 @@ html {
 
     z-index: 5;
 
+    outline: red solid 0.2vw;
 
 }
 
 .button_a {
-    width: 60%;
-    height: 60%;
-    background-color: rgb(255, 170, 42);
+    aspect-ratio: 1/1;
+    height: 18%;
+    background-color: rgba(255, 42, 110, 0);
     display: block;
     border-radius: 100%;
-    outline: rgb(228, 228, 228) solid 0.3vw;
+    outline: none;
     z-index: 5;
     transition: 0.2s 0s ease-out;
-    box-shadow: inset rgba(0, 0, 0, 0.192) 0.5vw 0.5vw 0.5vw, rgb(0, 0, 0) 0vw 0vw 2vw;
-    border: rgba(0, 0, 0, 0.247) 0.3vw solid;
+    border: none;
+    position: absolute;
 
 }
 
+.app_btn {
+
+    width: 21.33%;
+    height: 12%;
+    background-color: none;
+    display: block;
+    border-radius: 100%;
+    outline:none;
+    z-index: 5;
+    transition: 0.2s 0s ease-out;
+    border: none;
+    position: absolute;
+    transition-duration: 1s;
+
+}
+
+
+.app_btn:hover + .button_a_icon {
+    scale: 115%;
+
+}
+
+
 .button_b {
-    width: 75%;
-    height: 75%;
+    aspect-ratio: 1/1;
+    height: 100%;
     background-color: rgb(105, 212, 84);
     display: block;
     border-radius: 100%;
@@ -136,8 +305,8 @@ html {
 }
 
 .button_c {
-    width: 75%;
-    height: 75%;
+    aspect-ratio: 1/1;
+    height: 100%;
     background-color: rgb(236, 86, 86);
     display: block;
     border-radius: 100%;
@@ -152,6 +321,13 @@ html {
     scale: 115%;
     background-color: rgb(255, 187, 103);
 }
+
+.button_a:hover + .button_a_icon {
+    filter: hue-rotate(900deg) !important;
+
+}
+
+
 
 .button_b:hover {
     scale: 115%;
@@ -191,15 +367,36 @@ html {
     background-image: url(images/icon1.png);
     background-size: contain;
     aspect-ratio: 1/1;
-    height: 7.4%;
+    height: 7.5%;
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.75;
 }
 
+.button_a_icon {
+    position: absolute;
+    z-index: 6;
+
+    rotate: 0deg;
+    text-align: center;
+    font-size: 80%;
+    color: white;
+    pointer-events: none;
+    font-family: 'Oswald', sans-serif;
+    background-size: cover;
+    aspect-ratio: 1 / 1;
+    height: 15%;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 1;
+    scale: 100%;
+    transition-duration: 0.3s;
+}
+
 .button_c_icon {
     position: absolute;
     z-index: 6;
+    
 
     text-align: center;
     font-size: 80%;
@@ -207,12 +404,14 @@ html {
     pointer-events: none;
     font-family: 'Oswald', sans-serif;
     background-image: url(images/icon2.png);
-    background-size: contain;
-    width: 65%;
-    height: 65%;
-    opacity: 0.75;
+    background-size: cover;
+    aspect-ratio: 1 / 1;
+    height: 90%;
+    opacity: 1;
 
 }
+
+
 
 .slider {
     width: 90%;
@@ -418,6 +617,7 @@ html {
     -webkit-mask-image: url('images/mask1.png');
     -webkit-mask-position: center;
     -webkit-mask-size: 100% 100%;
+    overflow: visible;
 
 }
 
