--- a/web_app.css
+++ b/web_app.css
@@ -1,5 +1,5 @@
 html {
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(0, 0, 0);
     font-family: 'Oswald', sans-serif;
     font-size: 2vw;
     overflow: hidden;
@@ -7,7 +7,7 @@ html {
 }
 
 .main_container {
-    width: 70vw;
+    width: 80vw;
     aspect-ratio: 16 / 9;
 
     position: absolute;
@@ -35,6 +35,7 @@ html {
     outline: 0.4vw black solid;
     width: 100%;
     height: 100%;
+    aspect-ratio: 16/9;
 
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -44,54 +45,11 @@ html {
 
     transition: 1s ease-in-out;
     opacity: 1;
-    box-shadow: rgba(0, 0, 0, 0.667) 0.5vw 0.5vw 1vw;
 
 
 }
 
-.elements_container_hidden {
-    opacity: 50%;
-    scale: 80%;
-    
-}
 
-
-.closer {
-    width: 4vw;
-    height: 4vw;
-    z-index: 60;
-    position: absolute;
-    top: 0.2vw;
-    right: 2.2vw;
-
-    background-color: rgb(177, 18, 18);
-    border-radius: 100%;
-    outline: solid rgb(255, 53, 53) 0.4vw;
-    text-align: center;
-    font-family: 'Oswald', sans-serif;
-    font-size: 3vw;
-    line-height: 4vw;
-    font-weight: bolder;
-    color: white;
-    text-shadow: 0.2vw 0.2vw 0.2vw rgba(0, 0, 0, 0.331);
-
-    opacity: 0;
-    transition: 0.5s ease-out;
-    pointer-events: none;
-    box-shadow: inset rgba(0, 0, 0, 0.096) 0.5vw 0.5vw 0.5vw;
-    background-image: url(images/icon_closer.png);
-    background-size: cover;
-
-
-}
-
-.closer_active {
-    opacity: 100%;
-    transition: 0.5s 1s ease-out;
-    pointer-events: all;
-
-
-}
 
 .closer:hover {
     transition-delay: 0s;
@@ -234,11 +192,6 @@ html {
 
 }
 
-.closer:hover {
-    transition-delay: 0s;
-    scale: 125%;
-    background-color: rgb(0, 0, 0);
-}
 
 .element_box {
     display: flex;
@@ -267,6 +220,18 @@ html {
     position: absolute;
 
 }
+
+.btn_description{
+    position: absolute;
+    margin-bottom: -7vw;
+    font-size: 1.5vw;
+    color: white;
+    letter-spacing: 0.1vw;
+
+}
+
+
+
 
 .app_btn {
 
@@ -1061,11 +1026,12 @@ html {
 
 .main_overlay {
     width: 100%;
-    height: 100%;
+    aspect-ratio: 16/9;
     position: absolute;
 
     background-color: rgba(255, 255, 255, 0.107);
     z-index: 1;
+    box-shadow: rgb(0, 0, 0) 2vw 0vw 4vw inset, rgb(0, 0, 0) -2vw 0vw 4vw inset;
 }
 
 #slider1 {
@@ -1076,22 +1042,39 @@ html {
 }
 
 .section_type1 {
-    aspect-ratio: 4 / 3;
-    height: 25vw;
+    aspect-ratio: 4 / 2.5;
+    height: 22vw;
     background-color: rgba(0, 189, 132, 0.884);
     border-radius: 0.7vw;
     top: 0;
     bottom: 0;
-    left: -24vw;
+    left: -34vw;
     right: 0;
     margin: auto;
     position: absolute;
     z-index: 2;
     box-shadow: 0 0 2vw rgba(0, 0, 0, 0.4);
+    transition-duration: 3s;
+    transition-delay: 0.5s;
 
 
 
 }
+
+.section_type1:hover {
+    opacity: 0;
+
+}
+
+.badges_moveLeft {
+    transition-delay: 0s;
+    transition-duration: 1s;
+    left: -80vw;
+    background-color: red;
+}
+
+
+
 
 .section_type2 {
     aspect-ratio: 3 / 2;
@@ -1099,15 +1082,53 @@ html {
     background-size: contain;
     top: 0;
     bottom: 0;
-    left: 12vw;
+    left: 24vw;
     right: 0;
     margin: auto;
     position: absolute;
     z-index: 1;
     box-shadow: 0 0 1vw rgba(0, 0, 0, 0.4);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    padding: 3vw;
+}
+
+.inside_sectionGRID{
+    aspect-ratio: 3 / 2;
+    height: 32vw;
+    background-size: contain;
+    top: 0;
+    bottom: 0;
+    left: -1.65vw;
+    right: 0;
+    margin: auto;
+    position: absolute;
+    z-index: 1;
+    box-shadow: 0 0 1vw rgba(0, 0, 0, 0.4);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    row-gap: 2vw;
+    column-gap: 2vw;
+    padding: 3vw;
+    background-color: rgba(255, 239, 62, 0.299);
+    
 
 
 }
+
+
+
+.badge {
+    width: 100%;
+    aspect-ratio: 1/1;
+    outline: green 0.2vw solid;
+
+}
+
 
 .inside_section {
     position: relative;
@@ -1135,4 +1156,50 @@ html {
 
 
 }
+
+
+
+.BADGESslider {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0.349);
+
+
+}
+
+
+
+/*SCROLLBAR HIDE*/
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
