--- a/web_app.css
+++ b/web_app.css
@@ -71,7 +71,7 @@ html {
 }
 
 .logo {
-    background-image: url(../images/cropped-kostka_Grywit_gradient_white-270x270.png);
+    background-image: url(images/cropped-kostka_Grywit_gradient_white-270x270.png);
     background-color: yellow;
     border-radius: 100%;
     background-size: cover;
@@ -178,7 +178,7 @@ html {
     transition: 0.5s ease-out;
     pointer-events: none;
     box-shadow: inset rgba(0, 0, 0, 0.096) 0.5vw 0.5vw 0.5vw;
-    background-image: url(../images/icon_closer.png);
+    background-image: url(images/icon_closer.png);
     background-size: cover;
 
 
